<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_launch_recyc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <ImageView
            android:id="@+id/img_launch_pic"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <ImageView
            android:id="@+id/img_success"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_baseline_check_24"
            android:visibility="visible"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ImageView
            android:id="@+id/img_fail"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_baseline_clear_24"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tv_mission"
            android:text="@string/mission"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/img_launch_pic" />

        <TextView
            android:id="@+id/tv_date"
            android:text="@string/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/img_launch_pic"
            app:layout_constraintTop_toBottomOf="@id/tv_mission"/>

        <TextView
            android:id="@+id/tv_rocket"
            android:text="@string/rocket"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/img_launch_pic"
            app:layout_constraintTop_toBottomOf="@id/tv_date" />

        <TextView
            android:id="@+id/tv_days_since"
            android:text="@string/days"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/img_launch_pic"
            app:layout_constraintTop_toBottomOf="@id/tv_rocket" />



    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>